--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+5.0.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 5.0.4 (2019-05-10)
 ------------------
 
