--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+5.0.8 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 5.0.7 (2019-09-11)
 ------------------
 
