--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog of flooding-lib
 5.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Update to new version of Mapbox tile URLs.
 
 
 5.0.7 (2019-09-11)
