Back to development: 5.0.9

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog of flooding-lib
 ===================================================
 
 
+5.0.9 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 5.0.8 (2020-05-15)
 ------------------
 
